--- a/sandbox/qml.qrc
+++ b/sandbox/qml.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>main.qml</file>
         <file>main2.qml</file>
+        <file>video.qml</file>
     </qresource>
 </RCC>
