--- a/soro2-mc/assets.qrc
+++ b/soro2-mc/assets.qrc
@@ -3,4 +3,7 @@
         <file>map.html</file>
     </qresource>
     <qresource prefix="/icons"/>
+    <qresource prefix="/conf">
+        <file>gamecontrollerdb.txt</file>
+    </qresource>
 </RCC>
