--- a/soro_mc/qml.qrc
+++ b/soro_mc/qml.qrc
@@ -1,7 +1,7 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>Host.qml</file>
+        <file>NotificationHost.qml</file>
         <file>Message.qml</file>
         <file>ViewSelector.qml</file>
         <file>CameraThumbnailView.qml</file>
