--- a/soro_mc/assets.qrc
+++ b/soro_mc/assets.qrc
@@ -4,6 +4,7 @@
     </qresource>
     <qresource prefix="/icons">
         <file>ic_check_circle_white_48px.svg</file>
+        <file>ic_error_white_48px.svg</file>
     </qresource>
     <qresource prefix="/config">
         <file>gamecontrollerdb.txt</file>
