--- a/soro_mc/assets.qrc
+++ b/soro_mc/assets.qrc
@@ -1,12 +1,47 @@
 <RCC>
-    <qresource prefix="/html">
-        <file>map.html</file>
-    </qresource>
-    <qresource prefix="/icons">
-        <file>ic_check_circle_white_48px.svg</file>
-        <file>ic_error_white_48px.svg</file>
-    </qresource>
-    <qresource prefix="/config">
-        <file>gamecontrollerdb.txt</file>
+    <qresource prefix="/">
+        <file>icons/ic_check_circle_white_48px.svg</file>
+        <file>icons/ic_error_white_48px.svg</file>
+        <file>icons/ic_info_white_48px.svg</file>
+        <file>icons/ic_volume_off_white_48px.svg</file>
+        <file>icons/ic_volume_up_white_48px.svg</file>
+        <file>icons/ic_warning_white_48px.svg</file>
+        <file>config/gamecontrollerdb.txt</file>
+        <file>html/map.html</file>
+        <file>btn_icons/PS/a.png</file>
+        <file>btn_icons/PS/b.png</file>
+        <file>btn_icons/PS/dp.png</file>
+        <file>btn_icons/PS/dp_down.png</file>
+        <file>btn_icons/PS/dp_left.png</file>
+        <file>btn_icons/PS/dp_right.png</file>
+        <file>btn_icons/PS/dp_up.png</file>
+        <file>btn_icons/PS/lb.png</file>
+        <file>btn_icons/PS/ls.png</file>
+        <file>btn_icons/PS/lt.png</file>
+        <file>btn_icons/PS/options.png</file>
+        <file>btn_icons/PS/rb.png</file>
+        <file>btn_icons/PS/rs.png</file>
+        <file>btn_icons/PS/rt.png</file>
+        <file>btn_icons/PS/share.png</file>
+        <file>btn_icons/PS/touchpad.png</file>
+        <file>btn_icons/PS/x.png</file>
+        <file>btn_icons/PS/y.png</file>
+        <file>btn_icons/XB/x.png</file>
+        <file>btn_icons/XB/y.png</file>
+        <file>btn_icons/XB/a.png</file>
+        <file>btn_icons/XB/b.png</file>
+        <file>btn_icons/XB/back.png</file>
+        <file>btn_icons/XB/dp.png</file>
+        <file>btn_icons/XB/dp_down.png</file>
+        <file>btn_icons/XB/dp_left.png</file>
+        <file>btn_icons/XB/dp_right.png</file>
+        <file>btn_icons/XB/dp_up.png</file>
+        <file>btn_icons/XB/lb.png</file>
+        <file>btn_icons/XB/ls.png</file>
+        <file>btn_icons/XB/lt.png</file>
+        <file>btn_icons/XB/rb.png</file>
+        <file>btn_icons/XB/rs.png</file>
+        <file>btn_icons/XB/rt.png</file>
+        <file>btn_icons/XB/start.png</file>
     </qresource>
 </RCC>
