Start implementing keyboard/gamepad action framework - First Phase: Dev Complete

--- a/soro_mc/assets.qrc
+++ b/soro_mc/assets.qrc
@@ -43,5 +43,89 @@
         <file>btn_icons/XB/rs.png</file>
         <file>btn_icons/XB/rt.png</file>
         <file>btn_icons/XB/start.png</file>
+        <file>btn_icons/KB/0.png</file>
+        <file>btn_icons/KB/1.png</file>
+        <file>btn_icons/KB/2.png</file>
+        <file>btn_icons/KB/3.png</file>
+        <file>btn_icons/KB/4.png</file>
+        <file>btn_icons/KB/5.png</file>
+        <file>btn_icons/KB/6.png</file>
+        <file>btn_icons/KB/7.png</file>
+        <file>btn_icons/KB/8.png</file>
+        <file>btn_icons/KB/9.png</file>
+        <file>btn_icons/KB/a.png</file>
+        <file>btn_icons/KB/alt.png</file>
+        <file>btn_icons/KB/asterisk.png</file>
+        <file>btn_icons/KB/b.png</file>
+        <file>btn_icons/KB/backslash.png</file>
+        <file>btn_icons/KB/backspace.png</file>
+        <file>btn_icons/KB/c.png</file>
+        <file>btn_icons/KB/caps_lock.png</file>
+        <file>btn_icons/KB/comma.png</file>
+        <file>btn_icons/KB/ctrl.png</file>
+        <file>btn_icons/KB/d.png</file>
+        <file>btn_icons/KB/delete.png</file>
+        <file>btn_icons/KB/dot.png</file>
+        <file>btn_icons/KB/down.png</file>
+        <file>btn_icons/KB/e.png</file>
+        <file>btn_icons/KB/end.png</file>
+        <file>btn_icons/KB/enter.png</file>
+        <file>btn_icons/KB/escape.png</file>
+        <file>btn_icons/KB/f.png</file>
+        <file>btn_icons/KB/f1.png</file>
+        <file>btn_icons/KB/f2.png</file>
+        <file>btn_icons/KB/f3.png</file>
+        <file>btn_icons/KB/f4.png</file>
+        <file>btn_icons/KB/f5.png</file>
+        <file>btn_icons/KB/f6.png</file>
+        <file>btn_icons/KB/f7.png</file>
+        <file>btn_icons/KB/f8.png</file>
+        <file>btn_icons/KB/f9.png</file>
+        <file>btn_icons/KB/f10.png</file>
+        <file>btn_icons/KB/f11.png</file>
+        <file>btn_icons/KB/f12.png</file>
+        <file>btn_icons/KB/g.png</file>
+        <file>btn_icons/KB/h.png</file>
+        <file>btn_icons/KB/home.png</file>
+        <file>btn_icons/KB/i.png</file>
+        <file>btn_icons/KB/insert.png</file>
+        <file>btn_icons/KB/j.png</file>
+        <file>btn_icons/KB/k.png</file>
+        <file>btn_icons/KB/kp_enter.png</file>
+        <file>btn_icons/KB/kp_plus.png</file>
+        <file>btn_icons/KB/l.png</file>
+        <file>btn_icons/KB/left.png</file>
+        <file>btn_icons/KB/left_bracket.png</file>
+        <file>btn_icons/KB/m.png</file>
+        <file>btn_icons/KB/minus.png</file>
+        <file>btn_icons/KB/n.png</file>
+        <file>btn_icons/KB/num_lock.png</file>
+        <file>btn_icons/KB/o.png</file>
+        <file>btn_icons/KB/p.png</file>
+        <file>btn_icons/KB/page_down.png</file>
+        <file>btn_icons/KB/page_up.png</file>
+        <file>btn_icons/KB/plus.png</file>
+        <file>btn_icons/KB/printscreen.png</file>
+        <file>btn_icons/KB/q.png</file>
+        <file>btn_icons/KB/question.png</file>
+        <file>btn_icons/KB/quote.png</file>
+        <file>btn_icons/KB/r.png</file>
+        <file>btn_icons/KB/right.png</file>
+        <file>btn_icons/KB/right_bracket.png</file>
+        <file>btn_icons/KB/s.png</file>
+        <file>btn_icons/KB/semicolon.png</file>
+        <file>btn_icons/KB/shift.png</file>
+        <file>btn_icons/KB/space.png</file>
+        <file>btn_icons/KB/super.png</file>
+        <file>btn_icons/KB/t.png</file>
+        <file>btn_icons/KB/tab.png</file>
+        <file>btn_icons/KB/tilde.png</file>
+        <file>btn_icons/KB/u.png</file>
+        <file>btn_icons/KB/up.png</file>
+        <file>btn_icons/KB/v.png</file>
+        <file>btn_icons/KB/w.png</file>
+        <file>btn_icons/KB/x.png</file>
+        <file>btn_icons/KB/y.png</file>
+        <file>btn_icons/KB/z.png</file>
     </qresource>
 </RCC>
