Add spectrometer view, fix UI issues

--- a/soro_mc/qml.qrc
+++ b/soro_mc/qml.qrc
@@ -9,5 +9,6 @@
         <file>qml/ViewSelector.qml</file>
         <file>qml/MainContentView.qml</file>
         <file>qml/NavOverlay.qml</file>
+        <file>qml/SpectrometerView.qml</file>
     </qresource>
 </RCC>
